Modify JSON structure of endpoint for showing details of a Tweet
- Modify affected tests.
- Update API documentation.
- Configure root URL to be the REST API docs.
